--- a/Responsive Web Design/Tribute Page/style.css
+++ b/Responsive Web Design/Tribute Page/style.css
@@ -2,3 +2,33 @@ html,
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+h1 {
+  font-size: 36px;
+}
+
+header,
+#list-title {
+  text-align: center;
+}
+
+#img-caption {
+  margin-top: 10px;
+}
+
+#list-title,
+.date {
+  font-weight: bold;
+}
+
+li {
+  padding: 10px;
+}
+
+#image {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  margin: auto;
+  display: block;
+}
