--- a/Responsive Web Design/Tribute Page/style.css
+++ b/Responsive Web Design/Tribute Page/style.css
@@ -1,10 +1,22 @@
 html,
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(180deg, white, #989898);
 }
 
 h1 {
   font-size: 36px;
+  margin-bottom: -10px;
+}
+
+figcaption,
+#subtitle {
+  font-size: 12px;
+}
+
+main {
+  width: 70%;
+  margin: 0 auto;
 }
 
 header,
@@ -13,7 +25,7 @@ header,
 }
 
 #img-caption {
-  margin: 10px 0 50px 0;
+  margin: 10px 0 25px 0;
 }
 
 #list-title,
